# Toy-VM

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  asm.h  assembler.c  assembler.h  main.c  scanner.c  scanner.h  table.c  table.h  token.c  token.h  vm.c  vm.h
Include/: asm.h  assembler.h  context.h  defs.h  token.h  vm.h
Source/: CMakeLists.txt  asm.h  assembler.c  assembler.h  byte.c  byte.h  compiler.c  compiler.h  context.c  main.c  scanner.c  scanner.h  table.c  table.h  token.c  token.h  vm.c  vm.h
Source/Context/: CMakeLists.txt  init.c
